small edit on the landing page, add works [wip], css edits

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Hi I'm Nathanael Louzoun, a french front dev and designer based in Paris, currently looking for an internship..." />
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
-  <title>Louzoun Nathanael</title>
+  <title>Louzoun Nathanael I Portfolio</title>
 </head>
 
 <body>
@@ -46,32 +47,42 @@
     </div>
   </header>
 
-  <article id="one" data-color="#000000">
+  <article class="article" id="one" data-color="#000000">
     <h1 class="glitch" data-text="NATHANAEL LOUZOUN">Nathanael Louzoun</h1>
-    <h2 class="txt-rotate" data-period="2000" data-rotate='[ "dev front.", "designer.", "french  dev.", "blank", "blank" ]'></h2>
+    <h2 class="txt-rotate" data-period="2000" data-rotate='[ "front end.", "designer.", "french  dev.", "looking for an internship.", "blank" ]'></h2>
     <p class="moreWorks">Mes travaux<br> <span>&darr;</span></p>
     <div class="clear"></div>
   </article>
 
-  <article id="two" data-color="#7f3995">
-    <h1>Ipsum</h1>
+  <article class="article" id="two" data-color="#22a6b3">
+    <h1 class="myCreations">Mes créations</h1>
+    <h3 class="myCreationsName">Nespresso</h3>
+    <h3 class="myCreationsName">Dassault Aviation</h3>
+    <h3 class="myCreationsName">Booking</h3>
+    <h3 class="myCreationsName">So Comptoir</h3>
+    <h3 class="myCreationsName">WearYourMind</h3>
+    <h3 class="myCreationsName">Nike Product Page</h3>
     <div class="clear"></div>
   </article>
 
-  <article id="three" data-color="#0d78e7">
+  <article class="article" id="three" data-color="#0d78e7">
     <h1>Dolor</h1>
     <div class="clear"></div>
   </article>
 
-  <article id="four" data-color="#f88f18">
+  <article class="article" id="four" data-color="#f88f18">
     <h1>Sit</h1>
     <div class="clear"></div>
   </article>
 
-  <article id="five" data-color="#E91E63">
+  <article class="article" id="five" data-color="#E91E63">
     <h1>Amet</h1>
     <div class="clear"></div>
   </article>
+
+  <footer class="footerMe">
+    <h3>That's it folks (kill me pls)</h3>
+  </footer>
 
 </body>
 
