cursor and some edits

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </article>
 
   <footer class="footerMe">
-    <h3>That's it folks (kill me pls)</h3>
+    <h3>footer</h3>
   </footer>
 
 </body>
