add one more project + displaying img when hovering project title (wip)

--- a/index.html
+++ b/index.html
@@ -55,12 +55,16 @@
   </article>
 
   <article class="article" id="two" data-color="#22a6b3">
+    <div class="projectpic" id="divone">
+      <img src="assets/nespresso.jpg" alt="nespresso" class="img-responsive img-thumbnail" />
+    </div>
     <h1 class="myCreations">Mes créations</h1>
-    <h3 class="myCreationsName">Nespresso</h3>
+    <h3 class="myCreationsName" id="one">Nespresso</h3>
     <h3 class="myCreationsName">Dassault Aviation</h3>
     <h3 class="myCreationsName">Booking</h3>
     <h3 class="myCreationsName">So Comptoir</h3>
     <h3 class="myCreationsName">WearYourMind</h3>
+    <h3 class="myCreationsName">Alfred</h3>
     <h3 class="myCreationsName">Nike Product Page</h3>
     <div class="clear"></div>
   </article>
