playing with wowjs and animate

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <meta name="description" content="Hi I'm Nathanael Louzoun, a french front dev and designer based in Paris, currently looking for an internship..." />
   <link rel="stylesheet" type="text/css" href="css/reset.css" />
   <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <link rel="stylesheet" href="css/animate.css">
+  <script src="js/wow.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/script.js"></script>
   <title>Louzoun Nathanael I Portfolio</title>
@@ -50,11 +52,10 @@
   <article class="article" id="one" data-color="#000000">
     <h1 class="glitch" data-text="NATHANAEL LOUZOUN">Nathanael Louzoun</h1>
     <h2 class="txt-rotate" data-period="2000" data-rotate='[ "front end.", "designer.", "french  dev.", "looking for an internship.", "blank" ]'></h2>
-    <p class="moreWorks">Mes travaux<br> <span>&darr;</span></p>
-    <div class="clear"></div>
+    <div class="scroll-down"></div>
   </article>
 
-  <article class="article" id="two" data-color="#22a6b3">
+  <article class="article wow fadeInUp" id="two" data-color="#22a6b3">
     <div class="projectpic" id="divone">
       <img src="assets/nespresso.jpg" alt="nespresso" class="img-responsive img-thumbnail" />
     </div>
@@ -91,3 +92,8 @@
 </body>
 
 </html>
+
+<script src="js/wow.min.js"></script>
+<script>
+new WOW().init();
+</script>
