remove useless stuff + starting responsive

--- a/index.html
+++ b/index.html
@@ -45,16 +45,21 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+
+      <div class="headerWrapperMobile">
+
+      </div>
     </div>
   </header>
 
-  <article class="main" id="one" data-color="#000000">
+  <article class="main">
     <h1 class="glitch" data-text="NATHANAEL LOUZOUN">Nathanael Louzoun</h1>
     <h2 class="txt-rotate" data-period="2000" data-rotate='[ "front end.", "designer.", "french  dev.", "looking for an internship.", "blank" ]'></h2>
+    
     <div class="scroll-down"></div>
   </article>
 
-  <article class="works" id="two" data-color="#22a6b3">
+  <article class="works">
     <div class="projectpic" id="divone">
       <img src="assets/nespresso.jpg" alt="nespresso" class="img-responsive img-thumbnail" />
     </div>
@@ -73,9 +78,6 @@
 <footer class="footerMe">
     <h3>footer</h3>
   </footer>
-
-  <div class="cursor-dot-outline"></div>
-  <div class="cursor-dot"></div>
 </body>
 
 </html>
