add burger menu

--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         </ul>
       </nav>
     </div>
+
+    <nav class="navigationWebsite--mobile">
+      <div class="burger-button">
+          <span class="burger-top"></span>
+          <span class="burger-middle"></span>
+          <span class="burger-bottom"></span>
+      </div>
+       <div class="burger-menu">
+         <a href="">A propos de moi</a>
+         <a href="">Mes créations</a>
+         <a href="">CV</a>
+         <a href="">Contact</a>
+      </div>
+    </nav>
   </header>
 
   <article class="main">
