--- a/index.html
+++ b/index.html
@@ -114,21 +114,30 @@
 
     <article class="works">
       <div class="projectpic" id="divone">
-        <img
-          src="assets/nespresso.jpg"
-          alt="nespresso"
-          class="img-responsive img-thumbnail"
-        />
+        <img src="assets/nespresso.jpg" alt="nespresso" class="img-responsive img-thumbnail" />
+      </div>
+      <div class="projectpic" id="divtwo">
+        <img src="assets/dassault.jpg" alt="dassault" class="img-responsive img-thumbnail" />
+      </div>
+      <div class="projectpic" id="divthree">
+        <img src="assets/booking.jpg" alt="booking" class="img-responsive img-thumbnail" />
+      </div>
+      <div class="projectpic" id="divfour">
+        <img src="assets/socomptoir.jpg" alt="socomptoir" class="img-responsive img-thumbnail" />
+      </div>
+      <div class="projectpic" id="divfive">
+        <img src="assets/wearyourmind.jpg" alt="wearyourmind" class="img-responsive img-thumbnail" />
       </div>
       <h1 class="myCreations">Mes créations</h1>
       <h3 class="myCreationsName" id="one">Nespresso</h3>
-      <h3 class="myCreationsName">Dassault Aviation</h3>
-      <h3 class="myCreationsName">Booking</h3>
-      <h3 class="myCreationsName">So Comptoir</h3>
-      <h3 class="myCreationsName">WearYourMind</h3>
+      <h3 class="myCreationsName" id="two">Dassault Aviation</h3>
+      <h3 class="myCreationsName" id="three">Booking</h3>
+      <h3 class="myCreationsName" id="four">So Comptoir</h3>
+      <h3 class="myCreationsName" id="five">WearYourMind</h3>
       <h3 class="myCreationsName">Alfred</h3>
       <h3 class="myCreationsName">Nike Product Page</h3>
-    </article>
+      <div class="clear"></div>
+    </div>  
   </body>
 </html>
 
