--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
         <span class="burger-bottom"></span>
       </div>
       <div class="burger-menu">
-        <a href="">A propos de moi</a>
-        <a href="">Mes créations</a>
+        <a href="">About me</a>
+        <a href="">My creations</a>
         <a href="">CV</a>
         <a href="">Contact</a>
       </div>
@@ -34,8 +34,6 @@
           <ul class="header__nav">
             <svg
               class="header__logo"
-              width="284"
-              height="268"
               viewBox="0 0 284 268"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -87,10 +85,10 @@
               </defs>
             </svg>
             <li class="header__items">
-              <a class="header__links" href="#about">A propos de moi</a>
+              <a class="header__links" href="#about">About me</a>
             </li>
             <li class="header__items">
-              <a class="header__links" href="#works">Mes créations</a>
+              <a class="header__links" href="#works">My creations</a>
             </li>
             <li class="header__items">
               <a
@@ -167,7 +165,7 @@
           class="img-responsive img-thumbnail"
         />
       </div>
-      <h1 class="works__maintitle">Mes créations</h1>
+      <h1 class="works__maintitle">My creations</h1>
       <h3 class="works__title" id="one">Nespresso</h3>
       <h3 class="works__title" id="two">Dassault Aviation</h3>
       <h3 class="works__title" id="three">Booking</h3>
@@ -180,13 +178,22 @@
 
     <footer class="contact">
       <div class="footer">
-        <p class="footer__text">Intéressé par mon profil ? Contacter moi !</p>
+        <p class="footer__text">Interested ? Contact me !</p>
         <hr class="footer__seperator" />
-        <p class="footer__socialNetworks">Suivez moi</p>
+        <p class="footer__socialNetworks">Follow me !</p>
         <ul class="footer__socialWrapper">
-          <div id="icons" class="linkedin">linkedin</div>
-          <div id="icons" class="dribble">dribble</div>
-          <div id="icons" class="github">github</div>
+          <a
+            class="footer__links"
+            href="https://www.linkedin.com/in/nathana%C3%ABl-louzoun-008078173/"
+          >
+            <div id="icons" class="linkedin">linkedin</div>
+          </a>
+          <a class="footer__links" href="https://dribbble.com/NatsuDzn">
+            <div id="icons" class="dribble">dribble</div>
+          </a>
+          <a class="footer__links" href="https://github.com/NatsuDzn">
+            <div id="icons" class="github">github</div>
+          </a>
         </ul>
       </div>
     </footer>
