--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <title>Louzoun Nathanael I Portfolio</title>
   </head>
   <body class="bodyWrapper">
+
     <nav class="navigationWebsite--mobile">
       <div class="burger-button">
         <span class="burger-top"></span>
@@ -101,6 +102,7 @@
             <li class="header__items">
               <a class="header__links" href="#contact">Contact</a>
             </li>
+            <li class="header__wip">⚠️ WIP</li>
           </ul>
         </nav>
       </div>
